	VERSION file to variable cygbuild_opt_exclude_tmp_files.
	(CygbuildMakefilePrefixCheck): Adjust grep to find prefix=
	(CygbuildCmdFilesWrite): Fix variable name from 'to' to 'todir'.
	(CygbuildPatchList): Ignore */tmp/* directories.
	(CygbuildConfOptionAdjustment): Notify about --with and --without
	options in ./configure.
	(CygbuildCmdBuildStdMakefile): move set -x call.

2008-03-02  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh:
	(CygbuildIsMakefileCstandard): New.
	(CygbuildIsMakefileCstandard): Restore from revno:40a593c
	(CygbuildIsCplusplusPackage): Restore from revno:40a593c
	(CygbuildBootVariablesGlobalMain): Add perllocal.pod
	to variable CYGBUILD_TAR_EXCLUDE.
	(CygbuildCygcheckLibraryDepMain): Add prefix 'depends: '
	to all messages.

2008-03-01  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (dir): (CygbuildMakefileRunInstallCygwinOptions):
	Fix reading of variable makefile.
	(CygbuildMakefilePrefixCheck): Improve prefix check.
	(CygbuildMakefilePrefixIsStandard): Improve prefix check.
	(CygbuildBootVariablesId): Adjust PATH setting.
	(CygbuildMakeRunInstallFixPerlPostinstall): Improve postinstall
	snippet.
	(CygbuildInstallFixEtcdirInstall): Disregard pre/postinstall
	directory.
	(CygbuildCmdInstallCheckDocdir): Remeove head(1); won't work
	on image files.
	(CygbuildInstallFixInterpreterMain): Tighten regexp.
	(CygbuildInstallFixInterpreterPerl): Improce substitution.
	(CygbuildMakeRunInstallFixPerlPostinstall): Add -E to grep call.

2008-02-29  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.pl: (HELP::OPTIONS): Remove --init-pkgdb and
	--nomore-space.

	* bin/cygbuild.sh: (CygbuildCmdInstallFinishMessage): Restore
	old code that used pwd. This is correct in packaging scripts.
	(CygbuildIsRubyPackage): New.
	(CygbuildMakefileRunInstallRubyMain): New.
	(CygbuildCmdBuildMain): Add ruby support.
	(CygbuildCmdCleanMain): Add ruby support.
	(CygbuildCmdShadowMain): Add ruby support.
	(CygbuildCmdConfMain): Add ruby support.